# cdktf-python-rust-lambda

./: .gitignore  LICENSE  Makefile  README.md  cdktf.json  main.py  requirements.txt
infra/: __init__.py
lambdas/axumlambda/: Cargo.toml  README.md
lambdas/axumlambda/src/: handlers.rs
lambdas/simplelambda/: Cargo.toml  README.md
lambdas/simplelambda/src/: main.rs
myrustlambda/: Makefile
myrustlambda/src/: main.rs
